--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ong-projeto-almeida",
   "version": "0.1.0",
-  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
